2010-03-05  Alex Milowski  <alex@milowski.com>

        Reviewed by Kenneth Rohde Christiansen.

        Added tests for row and operator stretching.
        Updated over, underover, and subsup due to row/operators in use.

        * mathml/presentation/mo.xhtml: Added.
        * mathml/presentation/row.xhtml: Added.
        * platform/mac/mathml/presentation/mo-expected.checksum: Added.
        * platform/mac/mathml/presentation/mo-expected.png: Added.
        * platform/mac/mathml/presentation/mo-expected.txt: Added.
        * platform/mac/mathml/presentation/over-expected.checksum:
        * platform/mac/mathml/presentation/over-expected.png:
        * platform/mac/mathml/presentation/over-expected.txt:
        * platform/mac/mathml/presentation/row-expected.checksum: Added.
        * platform/mac/mathml/presentation/row-expected.png: Added.
        * platform/mac/mathml/presentation/row-expected.txt: Added.
        * platform/mac/mathml/presentation/subsup-expected.txt:
        * platform/mac/mathml/presentation/underover-expected.checksum:
        * platform/mac/mathml/presentation/underover-expected.png:
        * platform/mac/mathml/presentation/underover-expected.txt:

2010-03-05  Dean Jackson  <dino@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=35772
        Animation fill modes should be supported in the shorthand property

        Testcase for animation shorthand property (appears to be
        the first of its kind).

        * animations/animation-shorthand-expected.txt: Added.
        * animations/animation-shorthand.html: Added.

2010-03-05  Eric Seidel  <eric@webkit.org>

        No review.  Skipping recently regressed test to unblock the commit-queue (20 patches waiting).

        REGRESSION(55593?): fast/workers/worker-cloneport.html is timing out on Leopard
        https://bugs.webkit.org/show_bug.cgi?id=35819

        * platform/mac-leopard/Skipped:

2010-03-05  Dean Jackson  <dino@apple.com>
