@@ -1,3 +1,14 @@
+2010-03-05  Dmitry Titov  <dimich@chromium.org>
+
+        Reviewed by David Levin.
+
+        [v8] Remove wrong assert in GC callback
+        https://bugs.webkit.org/show_bug.cgi?id=35757
+
+        * fast/workers/resources/wrapper-map-gc.js: Added.
+        * fast/workers/wrapper-map-gc.html: Added.
+        * fast/workers/wrapper-map-gc-expected.txt: Added.
+
 2010-03-05  Alex Milowski  <alex@milowski.com>
 
         Reviewed by Kenneth Rohde Christiansen.
